Upgrading Java 11 to Java 25, Spring Boot 2.1.7 to 4.0.5, Swagger 2.10.0 to SpringDoc 3.0.1, Apache Commons Lang3 3.18.0 to 3.20.0, Jayway JsonPath 2.9.0 to 3.0.0